# Othello

./: .gitignore  README.md  main.py  pyproject.toml  struc.sh
UI/: ui.py
ai/: ai.py
ai/heuristics/: coin_parity.py  corners_captured.py  dynamic_weight.py  heuristic.py  hybrid_heuristic.py  static_weight.py
ai/reinforcement_learning/: monte_carlo_search_algorithm.py  monte_carlo_tree_node.py
ai/search_algorithms/: greedy.py  minimax.py  minimax_alpha_beta.py  random.py  search_algorithm.py
engine/: GameState.py  Move.py
statistics/: statistic.py
statistics/algorithm_vs_algorithm/all_vs_mcts/: example.xlsx  example1.xlsx  example2.xlsx  static_heuristic.py  statistic_static_weight.py  ~$example2.xlsx
tests/: statistic3.py  test.py  test_ai.py  test_sample.py
ui/: scenes.py  test_ai.py  ui.py
