[tool.poetry]
name = "othello"
version = "0.1.0"
description = ""
authors = ["ttnamnktp <tthanhnam.nktpglobal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
